--- a/overOns.html
+++ b/overOns.html
@@ -65,7 +65,11 @@
             </div>
         </div>
         <footer>
-
+            <div class="row">
+                <div class="col-md-4 column">test</div>
+                <div class="col-md-4 column">test</div>
+                <div class="col-md-4 column">test</div>
+            </div>
         </footer>
     </div>
 </body>
