--- a/overOns.html
+++ b/overOns.html
@@ -65,10 +65,46 @@
             </div>
         </div>
         <footer>
-            <div class="row">
-                <div class="col-md-4 column">test</div>
-                <div class="col-md-4 column">test</div>
-                <div class="col-md-4 column">test</div>
+            <div class="row row-footer">
+                <div class="col-md-4 column-footer">
+                    <div class="d-flex">
+                        <ion-icon name="call-outline"></ion-icon>
+                        <p>+32 123 456 789</p>
+                    </div>
+                    <div class="d-flex">
+                        <ion-icon name="mail-outline"></ion-icon>
+                        <p>info@pingwing.be</p>
+                    </div>
+                    <div class="d-flex">
+                        <ion-icon name="location-outline"></ion-icon>
+                        <p>Corda Campus Gebouw 2.05<br>
+                           Kempische Steenweg 293<br>
+                             3500 Hasselt
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 column-footer">
+                    <div>
+                        <h1>PINGWING</h1>
+                    </div>
+                    <div>
+                        <ion-icon name="logo-youtube"></ion-icon>
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                        <ion-icon name="logo-facebook"></ion-icon>
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </div>
+                    <div><p>Copyright @ PinWing</p></div>
+                </div>
+                <div class="col-md-4 column-footer">
+                    <div>
+                        <div class="input-group mb-3">
+
+                            <input type="text" class="form-control" placeholder="e-mailadres" aria-label="Username" aria-describedby="basic-addon1">
+                            <span class="input-group-text" id="basic-addon1">Mail</span>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
