aanmaken Components en loginPage

--- a/logIn.html
+++ b/logIn.html
@@ -5,14 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/login.css">
+    <script src="./AssetsBootstrap/jquery-3.5.1.min.js"></script>
+    <script src="./AssetsBootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
+    <script defer src="./Js/login.js"></script>
+    <link rel="stylesheet" href="./Css/login.css">
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <title>Document</title>
 </head>
 <body>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">test</div>
-        </div>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand brand" href="#">Pingwing</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav navigation-list">
+                    <a class="nav-link px-4" href="#">Product </a>
+                    <a class="nav-link px-4" href="./bestel.html">Bestel</a>
+                    <a class="nav-link px-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                    <a class="nav-link px-4" href="./contact.html">Contact</a>
+                    <a class="nav-link px-3" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
+                    <a class="nav-link px-3" href="#l"><ion-icon name="person-outline"></ion-icon></a>
+                </div>
+            </div>
+        </nav>
     </div>
 </body>
 </html>
