Navbar update en overOns bijgewerkt

--- a/logIn.html
+++ b/logIn.html
@@ -14,21 +14,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand brand" href="#">Pingwing</a>
+    <div class="container-fluid fullpage m-0 p-0">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav navigation-list">
-                    <a class="nav-link px-4" href="#">Product </a>
-                    <a class="nav-link px-4" href="./bestel.html">Bestel</a>
-                    <a class="nav-link px-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
-                    <a class="nav-link px-4" href="./contact.html">Contact</a>
-                    <a class="nav-link px-3" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
-                    <a class="nav-link px-3" href="#l"><ion-icon name="person-outline"></ion-icon></a>
-                </div>
+                <ul class="navbar-nav navigation-list">
+                    <li class="nav-item px-md-4 align-self-center">
+                        <a class="nav-link" href="#">Product </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="">|</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link pr-md-4" href="#l"><ion-icon name="person-outline"></ion-icon></a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
