--- a/overOns.html
+++ b/overOns.html
@@ -10,7 +10,7 @@
     <script defer src="./Js/overOns.js"></script>
     <link rel="stylesheet" href="./Css/overOns.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <title>Document</title>
+    <title>Over Ons</title>
 </head>
 <body>
     <div class="container-fluid fullpage m-0 p-0"> 
