footer en over ons page en Component

--- a/contact.html
+++ b/contact.html
@@ -13,27 +13,18 @@
 </head>
 <body>
     <footer class="row">
-        <div class="col-md-4 column-footer1">
-            <div class="info">
-                <ion-icon name="call-outline"></ion-icon>
-                <p>+32 123 45 789</p>
-            </div>
-            <div class="info">
-                <ion-icon name="mail-outline"></ion-icon>
-                <p>Info@PingWing.be</p>
-            </div>
-            <div class="info">
-                <ion-icon name="location-outline"></ion-icon>
-                <p>
-                    Corda Campus Gebouw 2.05<br>
-                    Kempische Steenweg  293<br>
-                    3500 Hasselt
-                </p>
+        <div class="col-md-4 d-flex justify-content-center align-items-center column-footer1">
+            <div class="column-footer1-links">
+                <p>Home</p>
+                <p>Product</p>
+                <p>Over ons</p>
+                <p>Contact</p>
             </div>
         </div>
         <div class="col-md-4 column-footer2">
             <div>
-                <h2>PINGWING</h2></div>
+                <h2>PINGWING</h2>
+            </div>
             <div>
                 <ion-icon name="logo-youtube"></ion-icon>
                 <ion-icon name="logo-linkedin"></ion-icon>
@@ -41,10 +32,27 @@
                 <ion-icon name="logo-instagram"></ion-icon>
             </div>
             <div>
-                <p>&copy;PINGWING</p>
+                <p>2021 &copy; PINGWING</p>
             </div>
         </div>
-        <div class="col-md-4 column-footer3">
+        <div class="col-md-4 d-flex justify-content-center align-items-center column-footer3">
+            <div class="column-footer3-info">
+                <div class="info">
+                    <ion-icon name="call-outline"></ion-icon>
+                    <p>+32 123 45 789</p>
+                </div>
+                <div class="info">
+                    <ion-icon name="mail-outline"></ion-icon>
+                    <p>Info@PingWing.be</p>
+                </div>
+                <div class="info">
+                    <ion-icon name="location-outline"></ion-icon>
+                    <p>
+                        Kempische Steenweg  293<br>
+                        3500 Hasselt
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
