--- a/overOns.html
+++ b/overOns.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class="main container">
-            <div class="row">
+            <div class="row py-5 my-5">
                 <div class="col-md-6 justify-content-md-start column-header">
                     <h1 class="header-text">OVER <br> PINGWING</h1>
                 </div>
@@ -59,105 +59,100 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 column-picture">
+                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                     <img src="./Images/Rik.png">
                   </div>
-                <div class="col-md-6 column-content">
-                    <h1>Rik</h1>
+                <div class="col-md-6 py-md-5 pb-5 column-content">
+                    <h1 class="text-md-left text-center">Rik</h1>
                     <p>"Wanneer welle broodjes halen? xd"</p>
-                    <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                        "Wanneer welle broodjes halen? xd""<br>
+                    <p>"Het project PingWing vind ik een zeer goed iniatief, ik sta er voor dat alle kinderen zich veilig voelen."<br>
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 column-content">
-                    <h1>Kai</h1>
+                <div class="col-md-6 py-md-5 pb-5 column-content">
+                    <h1 class="text-md-left text-center">Kai</h1>
                     <p>"Tis mig allemaal iets"</p>
                     <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
                         "Wanneer welle broodjes halen? xd""<br>
                     </p>
                 </div>
-                <div class="col-md-6 column-picture">
+                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
                     <img src="./Images/Kai.png">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 column-picture">
+                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                     <img src="./Images/Thymen.png">
                 </div>
-                <div class="col-md-6 column-content">
-                    <h1>Thymen</h1>
-                    <p>"Jama, ijsberen en pinguins <br> zitten nooit samen op de noordpool"</p>
-                    <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                        "Wanneer welle broodjes halen? xd""<br>
+                <div class="col-md-6 py-md-5 pb-5 column-content">
+                    <h1 class="text-md-left text-center">Thymen</h1>
+                    <p>"Jama, ijsberen en pinguins zitten nooit samen op de noordpool"</p>
+                    <p>"Al jaren ben ik Werkzaam bij PingWing, ik houd me voornamelijk bezig met coding"<br>
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 column-content">
-                    <h1>Dries</h1>
+                <div class="col-md-6 py-md-5 pb-5 column-content">
+                    <h1 class="text-md-left text-center">Dries</h1>
                     <p>"Designer by day, comic sanser by night"</p>
-                    <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                        "Wanneer welle broodjes halen? xd""<br>
+                    <p>"Ik ben een werknemer bij het bedrijf met als functie Graphic designer."<br>
                     </p>
                 </div>
-                <div class="col-md-6 column-picture">
+                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
                     <img src="./Images/Dries.png">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 column-picture">
+                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                     <img src="./Images/Arisha.png">
                 </div>
-                <div class="col-md-6 column-content">
-                    <h1>Arisha</h1>
-                    <p>"Just a LIDL bittle"</p>
-                    <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                        "Wanneer welle broodjes halen? xd""<br>
-                    </p>
+                <div class="col-md-6 py-md-5 pb-5 column-content">
+                    <h1 class="text-md-left text-center">Arisha</h1>
+                    <p>"Klik, klik en klaar"</p>
+                    <p>"Ik werk al 7 jaar lang bij PingWing als Graphic designer."<br></p>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="row row-footer">
-                <div class="col-md-4 column-footer">
-                    <div class="d-flex">
+        <footer class="row">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column-footer1">
+                <div class="column-footer1-links">
+                    <p>Home</p>
+                    <p>Product</p>
+                    <p>Over ons</p>
+                    <p>Contact</p>
+                </div>
+            </div>
+            <div class="col-md-4 column-footer2">
+                <div>
+                    <h2>PINGWING</h2>
+                </div>
+                <div>
+                    <ion-icon name="logo-youtube"></ion-icon>
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    <ion-icon name="logo-facebook"></ion-icon>
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </div>
+                <div>
+                    <p>2021 &copy; PINGWING</p>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center align-items-center column-footer3">
+                <div class="column-footer3-info">
+                    <div class="info">
                         <ion-icon name="call-outline"></ion-icon>
-                        <p>+32 123 456 789</p>
+                        <p>+32 123 45 789</p>
                     </div>
-                    <div class="d-flex">
+                    <div class="info">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <p>info@pingwing.be</p>
+                        <p>Info@PingWing.be</p>
                     </div>
-                    <div class="d-flex">
+                    <div class="info">
                         <ion-icon name="location-outline"></ion-icon>
-                        <p>Corda Campus Gebouw 2.05<br>
-                           Kempische Steenweg 293<br>
-                             3500 Hasselt
+                        <p>
+                            Kempische Steenweg  293<br>
+                            3500 Hasselt
                         </p>
-                    </div>
-                </div>
-                <div class="col-md-4 column-footer">
-                    <div>
-                        <h1>PINGWING</h1>
-                    </div>
-                    <div>
-                        <ion-icon name="logo-youtube"></ion-icon>
-                        <ion-icon name="logo-linkedin"></ion-icon>
-                        <ion-icon name="logo-facebook"></ion-icon>
-                        <ion-icon name="logo-instagram"></ion-icon>
-                    </div>
-                    <div><p>Copyright @ PinWing</p></div>
-                </div>
-                <div class="col-md-4 column-footer">
-                    <div>
-                        <div class="input-group mb-3">
-
-                            <input type="text" class="form-control" placeholder="e-mailadres" aria-label="Username" aria-describedby="basic-addon1">
-                            <span class="input-group-text" id="basic-addon1">Mail</span>
-                        </div>
-
                     </div>
                 </div>
             </div>
