footer fix, navbar fix, GeneralStyles alles toegevoegd en components update

--- a/overOns.html
+++ b/overOns.html
@@ -45,7 +45,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="main container">
+        <main class="main container">
             <div class="row py-5 my-5">
                 <div class="col-md-6 justify-content-md-start column-header">
                     <h1 class="header-text">OVER <br> PINGWING</h1>
@@ -103,7 +103,7 @@
                     <img src="./Images/Dries.png">
                 </div>
             </div>
-            <div class="row">
+            <div class="row pb-5">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                     <img src="./Images/Arisha.png">
                 </div>
@@ -113,39 +113,39 @@
                     <p>"Ik werk al 7 jaar lang bij PingWing als Graphic designer."<br></p>
                 </div>
             </div>
-        </div>
-        <footer class="row">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column-footer1">
-                <div class="column-footer1-links">
-                    <p>Home</p>
-                    <p>Product</p>
-                    <p>Over ons</p>
-                    <p>Contact</p>
+        </main>
+        <footer class="row p-5">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+                <div class="column1-footer-links d-flex flex-column">
+                    <a class="pb-2" href="./index.html">Home</a>
+                    <a class="pb-2" href="./product.html">Product</a>
+                    <a class="pb-2" href="./overOns.html">Over ons</a>
+                    <a href="./contact.html">Contact</a>
                 </div>
             </div>
-            <div class="col-md-4 column-footer2">
-                <div>
+            <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+                <div class="pb-2">
                     <h2>PINGWING</h2>
                 </div>
-                <div>
-                    <ion-icon name="logo-youtube"></ion-icon>
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                    <ion-icon name="logo-facebook"></ion-icon>
-                    <ion-icon name="logo-instagram"></ion-icon>
+                <div class="pb-2">
+                    <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
                 </div>
                 <div>
                     <p>2021 &copy; PINGWING</p>
                 </div>
             </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center column-footer3">
-                <div class="column-footer3-info">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer">
+                <div class="column3-footer-info">
                     <div class="info">
                         <ion-icon name="call-outline"></ion-icon>
                         <p>+32 123 45 789</p>
                     </div>
-                    <div class="info">
+                    <div class="info pb-3">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <p>Info@PingWing.be</p>
+                        <a href="mailto:test@test.com">Info@PingWing.be</a>
                     </div>
                     <div class="info">
                         <ion-icon name="location-outline"></ion-icon>
