--- a/overOns.html
+++ b/overOns.html
@@ -10,9 +10,11 @@
     <script defer src="./Js/overOns.js"></script>
     <link rel="stylesheet" href="./Css/overOns.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Over Ons</title>
 </head>
 <body>
+<!-- NAVIGATIEBALK-->
     <div class="container-fluid fullpage m-0 p-0"> 
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand brand" href="./index.html">Pingwing</a>
@@ -40,11 +42,12 @@
                         <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#l"><ion-icon name="person-outline"></ion-icon></a>
+                        <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <!--MAIN-->
         <main class="main container">
             <div class="row py-5 my-5">
                 <div class="col-md-6 justify-content-md-start column-header">
@@ -114,6 +117,7 @@
                 </div>
             </div>
         </main>
+        <!--FOOTER-->
         <footer class="row p-5">
             <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
                 <div class="column1-footer-links d-flex flex-column">
