--- a/index.html
+++ b/index.html
@@ -52,6 +52,38 @@
             </ul>
         </div>
     </nav>
+    <!--MAIN-->
+    <main class="main container">
+        <div class="row">
+            <div class="col-md-6 justify-content-md-start column-header">afbeelding</div>
+            <div class="col-md-6 justify-content-md-start column-header">
+
+                <h1 class="header-text">RELAX MORE <br> FEEL SAFE</h1>
+                <p>Ga altijd met een gerust hart op<br>
+                    pad en weet dat je kinderen veilig zijn,</p>
+                <button class="btn btn-info">Koop nu</button>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">Specificaties</div>
+        </div>
+        <div class="row">
+            <div class="col">Mockup GSM</div>
+            <div class="col">MY Pingwing</div>
+        </div>
+        <div class="row">
+            <div class="col">Team</div>
+            <div class="col">Focus</div>
+            <div class="col">Onze missie</div>
+        </div>
+        <div class="row">
+            <div class="col">MEGAFOOTER</div>
+        </div>
+
+    </main>
+
+
 
     <!--FOOTER-->
     <footer class="row p-5">
