--- a/logIn.html
+++ b/logIn.html
@@ -11,6 +11,7 @@
     <script defer src="./Js/login.js"></script>
     <link rel="stylesheet" href="./Css/login.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Document</title>
 </head>
 <body>
