Winkelmandje pagina in progress

--- a/overOns.html
+++ b/overOns.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <!--MAIN-->
-        <main class="main container">
+        <main class="container">
             <div class="row py-5 my-5">
                 <div class="col-md-6 justify-content-md-start column-header">
                     <h1 class="header-text">OVER <br> PINGWING</h1>
