--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./Css/contact.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <div class="container-fluid fullpage m-0 p-0">
@@ -27,10 +27,10 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./overOns.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                        <a class="nav-link px-md-4 active" href="./contact.html">Contact</a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="">|</a>
@@ -75,7 +75,7 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
                         </div>
-                        <div class="col-md-12 d-flex pt-3 justify-content-end">
+                        <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
                             <button class="btn px-4">Verzenden</button>
                         </div>
                     </div>
