--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./Css/contact.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Contact</title>
 </head>
 <body>
