login system bezig

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="./logIn.html">
+                        <a class="nav-link pr-md-4" id="naam" href="./logIn.html">
                             <ion-icon class="" name="person-outline"></ion-icon>
                         </a>
                     </li>
