--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@
                 </div>
             </div>
         </main>
+        <div class="footer image">
+            <img class="img-fluid" src="./Images/alaska.png" alt="">
+        </div>
         <!--FOOTER-->
         <footer class="row">
             <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
